--- a/Mannys-Cloud-Backend/Mannys-Cloud-Backend/Mannys-Cloud-Backend.csproj
+++ b/Mannys-Cloud-Backend/Mannys-Cloud-Backend/Mannys-Cloud-Backend.csproj
@@ -5,9 +5,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Mannys_Cloud_Backend</RootNamespace>
+    <UserSecretsId>128ce34c-7e10-4741-a37d-d944534dfef7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.25.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
