--- a/Mannys-Cloud-Backend/Mannys-Cloud-Backend/appsettings.json
+++ b/Mannys-Cloud-Backend/Mannys-Cloud-Backend/appsettings.json
@@ -7,11 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MANNYS-PC\\SQLEXPRESS;Database=MannysCloudDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=MANNYS-PC\\SQLEXPRESS;Database=MannysCloudDb;Trusted_Connection=True;TrustServerCertificate=True",
   },
   "Jwt": {
     "Key": "ThisIsASuperSecureJwtKey_ChangeThis!!",
     "Issuer": "MannysCloud",
     "Audience": "MannysCloudUsers"
-  }
+  },
+  "BlobContainer": "user-files"
 }
